# dying-tree

./: .ackrc  CMakeLists.txt  README  README.md  Readme.Taurus  corrected_binomial-tree.c  corrected_binomial-tree.h  corrected_binomial-tree_io.c  corrected_binomial-tree_io.h  corrected_gossip.c  corrected_gossip.h  corrected_lame-tree.c  corrected_lame-tree.h  corrected_tree.c  corrected_tree.h  dying.c  dying.h  dying_wrap.w  profile.c  util.c  util.h
mapping/: MPICH_RANK_ORDER.128  MPICH_RANK_ORDER.16  MPICH_RANK_ORDER.256  MPICH_RANK_ORDER.32  MPICH_RANK_ORDER.512  MPICH_RANK_ORDER.64  mapping.py
scripts/: analyze_daint.R  analyze_taurus.R  daint.sh  reparse_daint.py  reparse_taurus.py  taurus.sh
wrap/: WrapConfig.cmake
